--- a/index.html
+++ b/index.html
@@ -15,22 +15,30 @@
   </style>
 </head>
 <body>
+<div class="wrapper">
+<header id="intro"> <h1>Simple, traffic-based pricing</h1> 
+ <p id="signup">Sign-up for our 30-day trial. No credit card required. </p> </header>
 
-  Simple, traffic-based pricing
-  Sign-up for our 30-day trial. No credit card required. 
+<div id="card"><section id="top">
+<h2>100k Pageviews</h2> 
+<div id="slider"></div>
+<div id="pricing"><span id="price"></span> $ /month</div> 
+<div id="options"><span class="period">Monthly Billing </span> 
+  <span class="period">Yearly Billing</span> <span id="discount">25% discount</span> 
+  </div> 
+</section>
+<hr>
+<section id="plan"> <div id="benefits">
+<p class="feature"><span class="tick"></span> Unlimited websites</p>  
+ <p class="feature"><span class="tick"></span> 100% data ownership</p> 
+ <p class="feature"><span class="tick"></span> Email reports</p> 
+</div>
+ <button id="start">Start my trial</button> 
+</section> 
+</div>
 
-  Pageviews
-  $ /month
-
-  Monthly Billing
-  Yearly Billing 25% discount
-
-  Unlimited websites
-  100% data ownership
-  Email reports
-
-  Start my trial
-  
+ 
+  </div>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
