--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@600;800&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="app.css">
+  <link rel="stylesheet" href="styles.css">
   <title>Frontend Mentor | Interactive pricing component</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
@@ -18,9 +18,12 @@
   </style>
 </head>
 <body>
+  <header id="intro"> 
+    <h1>Simple, traffic-based pricing</h1> 
+    <p id="sign-up">Sign-up for our 30-day trial. No credit card required. </p> </header>
+
 <div class="wrapper">
-<header id="intro"> <h1>Simple, traffic-based pricing</h1> 
- <p id="signup">Sign-up for our 30-day trial. No credit card required. </p> </header>
+
 
 <div id="card"><section id="top">
 <h2>100k Pageviews</h2> 
