some styling progress

--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
 <div id="card"><section id="top">
 <h2>100k Pageviews</h2> 
 <div id="slider"></div>
-<div id="pricing"><span id="price"></span> $ /month</div> 
-<div id="options"><span class="period">Monthly Billing </span> 
-  <span class="period">Yearly Billing</span> <span id="discount">25% discount</span> 
+<div id="pricing"><span id="price"></span> /month</div> 
+<div id="options"><p class="period">Monthly Billing </p> 
+ <div id="toggle"></div> <p class="period">Yearly Billing</p> <span id="discount">-25%</span> 
   </div> 
 </section>
 <hr>
