--- a/index.html
+++ b/index.html
@@ -27,13 +27,16 @@
 
 <div id="card"><section id="top">
 <h2>100k Pageviews</h2> 
-<div id="slider"></div>
+<div id="bar"></div>
 <div id="pricing"><span id="price"></span> /month</div> 
 <div id="options"><p class="period">Monthly Billing </p> 
- <div id="toggle"></div> <p class="period">Yearly Billing</p> <span id="discount">-25%</span> 
+  <label class="switch">
+    <input type="checkbox">
+    <span class="slider round"></span>
+  </label>  <p class="period">Yearly Billing</p> <span id="discount">-25%</span> 
   </div> 
 </section>
-<hr>
+
 <section id="plan"> <div id="benefits">
 <p class="feature"><span class="tick"></span> Unlimited websites</p>  
  <p class="feature"><span class="tick"></span> 100% data ownership</p> 
