--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
 <div id="card"><section id="top">
 <h2>100k pageviews</h2> 
 <div class="slidecontainer">
-  <input type="range" id="bar" min="1" max="5">
+  <input type="range" id="bar" min="1" max="5" smooth="yes" >
 </div>
 
-<div id="pricing"><span id="price"></span> / <span id="term"></span></div> 
+<div id="pricing"><span id="price">234234</span> <span id="term">/ year</span></div> 
 <div id="options"><p class="period">Monthly Billing </p> 
   <label class="switch">
     <input type="checkbox">
