--- a/index.html
+++ b/index.html
@@ -23,18 +23,16 @@
     <p id="sign-up">Sign-up for our 30-day trial. No credit card required. </p> </header>
 
 <div class="wrapper">
-
-
 <div id="card"><section id="top">
-<h2>100k pageviews</h2> 
+<h2 id="h2"></h2> 
 <div class="slidecontainer">
   <input type="range" id="bar" min="1" max="5" smooth="yes" >
 </div>
 
-<div id="pricing"><span id="price">234234</span> <span id="term">/ year</span></div> 
+<div id="pricing"><span id="price"></span> <span id="term"></span></div> 
 <div id="options"><p class="period">Monthly Billing </p> 
   <label class="switch">
-    <input type="checkbox">
+    <input type="checkbox" id="checkbox">
     <span class="slider round"></span>
   </label>  <p class="period">Yearly Billing</p> <span id="discount">-25%</span> 
   </div> 
@@ -55,5 +53,6 @@
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
   </div>
+  <script src="app.js"></script>
 </body>
 </html>
