--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -11,7 +11,6 @@
   <link rel="stylesheet" href="styles.css">
   <title>Frontend Mentor | Interactive pricing component</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
     .attribution { font-size: 11px; text-align: center; }
     .attribution a { color: hsl(228, 45%, 44%); }
@@ -20,7 +19,8 @@
 <body>
   <header id="intro"> 
     <h1>Simple, traffic-based pricing</h1> 
-    <p id="sign-up">Sign-up for our 30-day trial. No credit card required. </p> </header>
+    <p id="sign-up">Sign-up for our 30-day trial. No credit card required. </p>
+  <div id="circles"></div> </header>
 
 <div class="wrapper">
 <div id="card"><section id="top">
@@ -34,7 +34,7 @@
   <label class="switch">
     <input type="checkbox" id="checkbox">
     <span class="slider round"></span>
-  </label>  <p class="period">Yearly Billing</p> <span id="discount">-25%</span> 
+  </label>  <p class="period">Yearly Billing <span id="discount">-25%</span></p>  
   </div> 
 </section>
 
@@ -51,7 +51,7 @@
   </div>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="https://github.com/alexiscenriquez">Alexis Enriquez</a>.
   </div>
   <script src="app.js"></script>
 </body>
