removed 'smooth' from input

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <div id="card"><section id="top">
 <h2 id="h2"></h2> 
 <div class="slidecontainer">
-  <input type="range" id="bar" min="1" max="5" smooth="yes" >
+  <input type="range" id="bar" min="1" max="5">
 </div>
 
 <div id="pricing"><span id="price"></span> <span id="term"></span></div> 
